# anton

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cr.yaml  docker-compose.yml
.github/workflows/: docker-build.yml  helm-release.yml
charts/anton/: Chart.yaml  values.yaml
charts/anton/templates/: NOTES.txt  _helpers.tpl  ingester-deployment.yaml  ingester-ingress.yaml  ingester-service.yaml  namespace.yaml  orchestrator-deployment.yaml  orchestrator-role.yaml  orchestrator-rolebinding.yaml  orchestrator-serviceaccount.yaml  rabbitmq-service.yaml  rabbitmq-statefulset.yaml  secret.yaml
ingester/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
ingester/app/: config.py  main.py
ingester/app/api/: dependencies.py
ingester/app/api/routers/: datadog.py  health.py  jira.py  sonar.py
ingester/app/models/: agent_task.py
ingester/app/models/webhooks/: datadog.py  jira.py  sonar.py
ingester/app/normalizers/: base.py  datadog.py  jira.py  registry.py  sonar.py
ingester/app/services/: publisher.py
k8s/: ingester.yaml  orchestrator.yaml  rabbitmq.yaml  secrets.yaml
orchestrator/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
orchestrator/app/: brain.py  config.py  consumer.py  dispatcher.py  main.py  models.py
orchestrator/templates/: base_job.yaml.j2
runner/: Dockerfile  pyproject.toml  requirements.txt
runner/app/: __main__.py  agent_tools.py  config.py  logging_config.py  models.py  reviewer.py  runner.py
