[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "anton-orchestrator"
version = "0.1.0"
description = "RabbitMQ consumer that routes tasks via Claude and dispatches Kubernetes Jobs"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9,<10",
    "anthropic>=0.42,<1",
    "kubernetes>=31,<32",
    "jinja2>=3,<4",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6,<7",
    "python-json-logger>=2,<3",
]
